@@ -11,6 +11,12 @@ static const short MVE_HDRCONST1 = 0x001A;
 static const short MVE_HDRCONST2 = 0x0100;
 static const short MVE_HDRCONST3 = 0x1133;
 
+mve_cb_Read mve_read;
+mve_cb_Alloc mve_alloc;
+mve_cb_Free mve_free;
+mve_cb_ShowFrame mve_showframe;
+mve_cb_SetPalette mve_setpalette;
+
 /*
  * private utility functions
  */
@@ -22,9 +28,7 @@ static unsigned short _mve_get_ushort(unsigned char *data);
  */
 static MVEFILE *_mvefile_alloc(void);
 static void _mvefile_free(MVEFILE *movie);
-static void _mvefile_free_filehandle(MVEFILE *movie);
-static int _mvefile_open(MVEFILE *movie, const char *filename);
-static int _mvefile_open_filehandle(MVEFILE *movie, int filehandle);
+static int _mvefile_open(MVEFILE *movie, void *stream);
 static void _mvefile_reset(MVEFILE *movie);
 static int  _mvefile_read_header(MVEFILE *movie);
 static void _mvefile_set_buffer_size(MVEFILE *movie, int buf_size);
@@ -35,9 +39,7 @@ static int _mvefile_fetch_next_chunk(MVEFILE *movie);
  */
 static MVESTREAM *_mvestream_alloc(void);
 static void _mvestream_free(MVESTREAM *movie);
-static void _mvestream_free_filehandle(MVESTREAM *movie);
-static int _mvestream_open(MVESTREAM *movie, const char *filename);
-static int _mvestream_open_filehandle(MVESTREAM *movie, int filehandle);
+static int _mvestream_open(MVESTREAM *movie, void *stream);
 static void _mvestream_reset(MVESTREAM *movie);
 
 /************************************************************
@@ -47,13 +49,13 @@ static void _mvestream_reset(MVESTREAM *movie);
 /*
  * open an MVE file
  */
-MVEFILE *mvefile_open(const char *filename)
+MVEFILE *mvefile_open(void *stream)
 {
     MVEFILE *file;
 
     /* create the file */
     file = _mvefile_alloc();
-    if (! _mvefile_open(file, filename))
+    if (! _mvefile_open(file, stream))
     {
         _mvefile_free(file);
         return NULL;
@@ -66,34 +68,6 @@ MVEFILE *mvefile_open(const char *filename)
     if (! _mvefile_read_header(file))
     {
         _mvefile_free(file);
-        return NULL;
-    }
-
-    /* now, prefetch the next chunk */
-    _mvefile_fetch_next_chunk(file);
-
-    return file;
-}
-
-MVEFILE *mvefile_open_filehandle(int filehandle)
-{
-    MVEFILE *file;
-
-    /* create the file */
-    file = _mvefile_alloc();
-    if (! _mvefile_open_filehandle(file, filehandle))
-    {
-        _mvefile_free_filehandle(file);
-        return NULL;
-    }
-
-    /* initialize the file */
-    _mvefile_set_buffer_size(file, 1024);
-
-    /* verify the file's header */
-    if (! _mvefile_read_header(file))
-    {
-        _mvefile_free_filehandle(file);
         return NULL;
     }
 
@@ -111,11 +85,6 @@ void mvefile_close(MVEFILE *movie)
     _mvefile_free(movie);
 }
 
-void mvefile_close_filehandle(MVEFILE *movie)
-{
-    _mvefile_free_filehandle(movie);
-}
-
 /*
  * reset a MVE file
  */
@@ -129,7 +98,7 @@ void mvefile_reset(MVEFILE *file)
     /* verify the file's header */
     if (! _mvefile_read_header(file))
     {
-        _mvefile_free_filehandle(file);
+        _mvefile_free(file);
 		//return NULL;
     }
 
@@ -239,7 +208,7 @@ int mvefile_fetch_next_chunk(MVEFILE *movie)
 /*
  * open an MVE stream
  */
-MVESTREAM *mve_open(const char *filename)
+MVESTREAM *mve_open(void *stream)
 {
     MVESTREAM *movie;
 
@@ -247,26 +216,9 @@ MVESTREAM *mve_open(const char *filename)
     movie = _mvestream_alloc();
 
     /* open */
-    if (! _mvestream_open(movie, filename))
+    if (! _mvestream_open(movie, stream))
     {
         _mvestream_free(movie);
-        return NULL;
-    }
-
-    return movie;
-}
-
-MVESTREAM *mve_open_filehandle(int filehandle)
-{
-    MVESTREAM *movie;
-
-    /* allocate */
-    movie = _mvestream_alloc();
-
-    /* open */
-    if (! _mvestream_open_filehandle(movie, filehandle))
-    {
-        _mvestream_free_filehandle(movie);
         return NULL;
     }
 
@@ -279,11 +231,6 @@ MVESTREAM *mve_open_filehandle(int filehandle)
 void mve_close(MVESTREAM *movie)
 {
     _mvestream_free(movie);
-}
-
-void mve_close_filehandle(MVESTREAM *movie)
-{
-    _mvestream_free_filehandle(movie);
 }
 
 /*
@@ -356,8 +303,8 @@ int mve_play_next_chunk(MVESTREAM *movie)
  */
 static MVEFILE *_mvefile_alloc(void)
 {
-    MVEFILE *file = (MVEFILE *)malloc(sizeof(MVEFILE));
-    file->stream = -1;
+    MVEFILE *file = (MVEFILE *)mve_alloc(sizeof(MVEFILE));
+    file->stream = NULL;
     file->cur_chunk = NULL;
     file->buf_size = 0;
     file->cur_fill = 0;
@@ -372,13 +319,11 @@ static MVEFILE *_mvefile_alloc(void)
 static void _mvefile_free(MVEFILE *movie)
 {
     /* free the stream */
-    if (movie->stream != -1)
-        close(movie->stream);
-    movie->stream = -1;
+	movie->stream = NULL;
 
     /* free the buffer */
     if (movie->cur_chunk)
-        free(movie->cur_chunk);
+        mve_free(movie->cur_chunk);
     movie->cur_chunk = NULL;
 
     /* not strictly necessary */
@@ -387,48 +332,16 @@ static void _mvefile_free(MVEFILE *movie)
     movie->next_segment = 0;
 
     /* free the struct */
-    free(movie);
-}
-
-static void _mvefile_free_filehandle(MVEFILE *movie)
-{
-    /* free the stream */
-	movie->stream = -1;
-
-    /* free the buffer */
-    if (movie->cur_chunk)
-        free(movie->cur_chunk);
-    movie->cur_chunk = NULL;
-
-    /* not strictly necessary */
-    movie->buf_size = 0;
-    movie->cur_fill = 0;
-    movie->next_segment = 0;
-
-    /* free the struct */
-    free(movie);
+    mve_free(movie);
 }
 
 /*
  * open the file stream in thie object
  */
-static int _mvefile_open(MVEFILE *file, const char *filename)
+static int _mvefile_open(MVEFILE *file, void *stream)
 {
-#ifdef O_BINARY
-    file->stream = open(filename, O_RDONLY | O_BINARY);
-#else
-    file->stream = open(filename, O_RDONLY);
-#endif
-    if (file->stream == -1)
-        return 0;
-
-    return 1;
-}
-
-static int _mvefile_open_filehandle(MVEFILE *file, int filehandle)
-{
-    file->stream = filehandle;
-    if (file->stream == -1)
+    file->stream = stream;
+    if (! file->stream)
         return 0;
 
     return 1;
@@ -455,11 +368,11 @@ static int _mvefile_read_header(MVEFILE *movie)
     unsigned char buffer[26];
 
     /* check the file is open */
-    if (movie->stream == -1)
+    if (! movie->stream)
         return 0;
 
     /* check the file is long enough */
-    if (read(movie->stream, buffer, 26) < 26)
+    if (! mve_read(movie->stream, buffer, 26))
         return 0;
 
     /* check the signature */
@@ -488,7 +401,7 @@ static void _mvefile_set_buffer_size(MVEFILE *movie, int buf_size)
 
     /* allocate new buffer */
     new_len = 100 + buf_size;
-    new_buffer = (unsigned char *)malloc(new_len);
+    new_buffer = (unsigned char *)mve_alloc(new_len);
 
     /* copy old data */
     if (movie->cur_chunk  &&  movie->cur_fill)
@@ -497,7 +410,7 @@ static void _mvefile_set_buffer_size(MVEFILE *movie, int buf_size)
     /* free old buffer */
     if (movie->cur_chunk)
     {
-        free(movie->cur_chunk);
+        mve_free(movie->cur_chunk);
         movie->cur_chunk = 0;
     }
 
@@ -512,11 +425,11 @@ static int _mvefile_fetch_next_chunk(MVEFILE *movie)
     unsigned short length;
 
     /* fail if not open */
-    if (movie->stream == -1)
+    if (! movie->stream)
         return 0;
 
     /* fail if we can't read the next segment descriptor */
-    if (read(movie->stream, buffer, 4) < 4)
+    if (! mve_read(movie->stream, buffer, 4))
         return 0;
 
     /* pull out the next length */
@@ -526,7 +439,7 @@ static int _mvefile_fetch_next_chunk(MVEFILE *movie)
     _mvefile_set_buffer_size(movie, length);
 
     /* read the chunk */
-    if (read(movie->stream, movie->cur_chunk, length) < length)
+    if (! mve_read(movie->stream, movie->cur_chunk, length))
         return 0;
     movie->cur_fill = length;
     movie->next_segment = 0;
@@ -556,7 +469,7 @@ static MVESTREAM *_mvestream_alloc(void)
     MVESTREAM *movie;
 
     /* allocate and zero-initialize everything */
-    movie = (MVESTREAM *)malloc(sizeof(MVESTREAM));
+    movie = (MVESTREAM *)mve_alloc(sizeof(MVESTREAM));
     movie->movie = NULL;
     movie->context = 0;
     memset(movie->handlers, 0, sizeof(movie->handlers));
@@ -577,33 +490,17 @@ static void _mvestream_free(MVESTREAM *movie)
     /* clear context and handlers */
     movie->context = NULL;
     memset(movie->handlers, 0, sizeof(movie->handlers));
-}
 
-static void _mvestream_free_filehandle(MVESTREAM *movie)
-{
-    /* close MVEFILE */
-    if (movie->movie)
-        mvefile_close_filehandle(movie->movie);
-    movie->movie = NULL;
-
-    /* clear context and handlers */
-    movie->context = NULL;
-    memset(movie->handlers, 0, sizeof(movie->handlers));
+	/* free the struct */
+	mve_free(movie);
 }
 
 /*
  * open an MVESTREAM object
  */
-static int _mvestream_open(MVESTREAM *movie, const char *filename)
+static int _mvestream_open(MVESTREAM *movie, void *stream)
 {
-    movie->movie = mvefile_open(filename);
-
-    return (movie->movie == NULL) ? 0 : 1;
-}
-
-static int _mvestream_open_filehandle(MVESTREAM *movie, int filehandle)
-{
-    movie->movie = mvefile_open_filehandle(filehandle);
+    movie->movie = mvefile_open(stream);
 
     return (movie->movie == NULL) ? 0 : 1;
 }
